--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "daisyui": "^2.25.0",
+    "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-daisyui": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-localstorage-simple": "^2.5.1",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
