--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css": "npx tailwindcss -i src/input.css -o src/styles.css -w"
   },
   "eslintConfig": {
     "extends": [
